[package]
name = "qingping-mqtt-interceptor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
env_logger = "0.10.0"
envconfig = "0.10.0"
libc = "0.2.147"
log = "0.4.20"
mqttrs = "0.4.1"
pcap = "1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[profile.minsize]
inherits = "release"
strip = true
lto = true
opt-level = "z"
panic = "abort"
